--- a/webapp/package.json
+++ b/webapp/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "antd": "^5.26.0",
     "cors": "^2.8.5",
     "react": "^18.3.1",
