--- a/webapp/package.json
+++ b/webapp/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
+    "styled-components": "^6.1.19",
     "swr": "^2.3.3",
     "xlsx": "^0.18.5"
   },
